# docs/swagger.json
@@ -439,10 +439,6 @@
                     "type": "string",
                     "example": "icon-dashboard"
                 },
-                "is_active": {
-                    "type": "boolean",
-                    "example": true
-                },
                 "order_index": {
                     "type": "integer",
                     "example": 0
@@ -489,10 +485,6 @@
                 "icon": {
                     "type": "string",
                     "example": "icon-dashboard"
-                },
-                "is_active": {
-                    "type": "boolean",
-                    "example": true
                 },
                 "order_index": {
                     "type": "integer",
@@ -549,10 +541,6 @@
                 "id": {
                     "type": "integer",
                     "example": 1
-                },
-                "is_active": {
-                    "type": "boolean",
-                    "example": true
                 },
                 "order_index": {
                     "type": "integer",
